--- a/login.html
+++ b/login.html
@@ -3,32 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <link  rel="stylesheet" href="music/index.css"  type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
 </head>
 <body>
 <div class="test"></div>
 
 <div align="center" ;width="50%" class="login">
     <P>
-        <label  class="logbutton">LOG登录</label>
+        <label class="logbutton">LOG登录</label>
 
     </P>
 
-    <form action="index.html"  >
+    <form action="index.html">
         <P>
-        <label>用户名：</label>
+            <label>用户名：</label>
             <input type="text" name="username" id="username" placeholder="用户名" required>
         </P>
         <p>
-            <label > 密码： &nbsp;&nbsp;</label>
-            <input type="text" name="password"  name="userpassword" id="userpassword"placeholder="密码" required>
+            <label> 密码： &nbsp;&nbsp;</label>
+            <input type="text" name="password" name="userpassword" id="userpassword" placeholder="密码" required>
         </p>
-            <p>
-            <input class="button" type="submit"value="登录" >
-            </p>
+        <p>
+            <input class="button" type="submit" value="登录">
+        </p>
 
     </form>
 
 </div>
 </body>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 </html>
